third_party/llvm-project/clang/test/Preprocessor/missing-system-header.h
#pragma clang system_header
#include "not exist"  // expected-error {{file not found}}
